fix: fixed width search input and visibiliti menu

--- a/css/style.css
+++ b/css/style.css
@@ -523,6 +523,7 @@ template {
     display: flex;
     width: 16px;
     height: 11px;
+    padding: 0;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
