--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -33,6 +33,7 @@
       display: flex
       width: 16px
       height: 11px
+      padding: 0
       align-items: center
       justify-content: space-between
       flex-direction: column
